--- a/NumpyDemo.ipynb
+++ b/NumpyDemo.ipynb
@@ -2009,34 +2009,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 176,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.843333333333334\n",
+      "5.8\n",
+      "0.8253012917851409\n"
+     ]
+    }
+   ],
    "source": [
     "# Q. Tìm mean, median, standard deviation của sepallength (1st column)\n",
-    "\n"
+    "sepal_length = species[:,0]\n",
+    "mean = np.mean(sepal_length)\n",
+    "median = np.median(sepal_length)\n",
+    "sd = np.std(sepal_length)\n",
+    "print(mean)\n",
+    "print(median)\n",
+    "print(sd)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 179,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.22222222, 0.16666667, 0.11111111, 0.08333333, 0.19444444,\n",
+       "       0.30555556, 0.08333333, 0.19444444, 0.02777778, 0.16666667,\n",
+       "       0.30555556, 0.13888889, 0.13888889, 0.        , 0.41666667,\n",
+       "       0.38888889, 0.30555556, 0.22222222, 0.38888889, 0.22222222,\n",
+       "       0.30555556, 0.22222222, 0.08333333, 0.22222222, 0.13888889,\n",
+       "       0.19444444, 0.19444444, 0.25      , 0.25      , 0.11111111,\n",
+       "       0.13888889, 0.30555556, 0.25      , 0.33333333, 0.16666667,\n",
+       "       0.19444444, 0.33333333, 0.16666667, 0.02777778, 0.22222222,\n",
+       "       0.19444444, 0.05555556, 0.02777778, 0.19444444, 0.22222222,\n",
+       "       0.13888889, 0.22222222, 0.08333333, 0.27777778, 0.19444444,\n",
+       "       0.75      , 0.58333333, 0.72222222, 0.33333333, 0.61111111,\n",
+       "       0.38888889, 0.55555556, 0.16666667, 0.63888889, 0.25      ,\n",
+       "       0.19444444, 0.44444444, 0.47222222, 0.5       , 0.36111111,\n",
+       "       0.66666667, 0.36111111, 0.41666667, 0.52777778, 0.36111111,\n",
+       "       0.44444444, 0.5       , 0.55555556, 0.5       , 0.58333333,\n",
+       "       0.63888889, 0.69444444, 0.66666667, 0.47222222, 0.38888889,\n",
+       "       0.33333333, 0.33333333, 0.41666667, 0.47222222, 0.30555556,\n",
+       "       0.47222222, 0.66666667, 0.55555556, 0.36111111, 0.33333333,\n",
+       "       0.33333333, 0.5       , 0.41666667, 0.19444444, 0.36111111,\n",
+       "       0.38888889, 0.38888889, 0.52777778, 0.22222222, 0.38888889,\n",
+       "       0.55555556, 0.41666667, 0.77777778, 0.55555556, 0.61111111,\n",
+       "       0.91666667, 0.16666667, 0.83333333, 0.66666667, 0.80555556,\n",
+       "       0.61111111, 0.58333333, 0.69444444, 0.38888889, 0.41666667,\n",
+       "       0.58333333, 0.61111111, 0.94444444, 0.94444444, 0.47222222,\n",
+       "       0.72222222, 0.36111111, 0.94444444, 0.55555556, 0.66666667,\n",
+       "       0.80555556, 0.52777778, 0.5       , 0.58333333, 0.80555556,\n",
+       "       0.86111111, 1.        , 0.58333333, 0.55555556, 0.5       ,\n",
+       "       0.94444444, 0.55555556, 0.58333333, 0.47222222, 0.72222222,\n",
+       "       0.66666667, 0.72222222, 0.41666667, 0.69444444, 0.66666667,\n",
+       "       0.66666667, 0.55555556, 0.61111111, 0.52777778, 0.44444444])"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Q. Chuẩn hóa cột sepallength để giá trị trong khoảng [0,1]\n",
-    "\n"
+    "sepal_length_norm = (sepal_length - np.min(sepal_length))/(((np.max(sepal_length))-np.min(sepal_length)))\n",
+    "sepal_length_norm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 181,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9999999999999999"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Q. Tính softmax score của sepallength.\n",
-    "\n",
+    "e_sepal_length = np.exp(sepal_length)\n",
+    "np.sum(e_sepal_length/np.sum(e_sepal_length))\n",
     "# The Softmax regression is a form of logistic regression that normalizes an input \n",
     "# value into a vector of values that follows a probability distribution whose total sums up to 1. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.00214401, 0.0158422 , 0.11705891, 0.86495488])"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([2,4,6,8])\n",
+    "e_a = np.exp(a)\n",
+    "e_a/np.sum(e_a)"
    ]
   }
  ],
