--- a/Homework5.ipynb
+++ b/Homework5.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "hide_input": false
    },
@@ -41,15 +41,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array:  [0 0 3 0 2 4 2 2 2 2]\n",
+      "[False, True, False, True, False, False, True, True, True, True]\n"
+     ]
+    }
+   ],
    "source": [
     "#Init array\n",
     "np.random.seed(100)\n",
     "a = np.random.randint(0, 5, 10)\n",
     "print('Array: ', a)\n",
-    "#TODO\n"
+    "#TODO\n",
+    "unique = []\n",
+    "res = []\n",
+    "for value in a:\n",
+    "    if value not in unique:\n",
+    "        res.append(False)\n",
+    "        unique.append(value)\n",
+    "    else:\n",
+    "        res.append(True)\n",
+    "\n",
+    "print(res)\n"
    ]
   },
   {
@@ -73,14 +92,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4 8 3 5 0 9 6] [0 7 1 9 3 8 2]\n",
+      "[4 5 6]\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.random.choice(range(10), 7, replace=False)\n",
     "b = np.random.choice(range(10), 7, replace=False)\n",
     "print(a,b)\n",
-    "#TODO\n"
+    "\n",
+    "#TODO\n",
+    "result = np.setdiff1d(a, b)\n",
+    "print(result)"
    ]
   },
   {
@@ -103,12 +134,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 4 7 8 4]\n",
+      "[1 0 0 4 0 0 7 0 0 8 0 0 4]\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.random.randint(1, 10, 5)\n",
-    "#TODO\n"
+    "print(a)\n",
+    "#TODO\n",
+    "result = np.zeros(3 * len(a) - 2, dtype=a.dtype)\n",
+    "result[::3] = a\n",
+    "\n",
+    "print(result)"
    ]
   },
   {
@@ -121,9 +166,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[5.1, 3.5, 1.4, 0.2],\n",
+       "       [4.9, 3. , 1.4, 0.2],\n",
+       "       [4.7, 3.2, 1.3, 0.2],\n",
+       "       [4.6, 3.1, 1.5, 0.2],\n",
+       "       [5. , 3.6, 1.4, 0.2],\n",
+       "       [5.4, 3.9, 1.7, 0.4],\n",
+       "       [4.6, 3.4, 1.4, 0.3],\n",
+       "       [5. , 3.4, 1.5, 0.2],\n",
+       "       [4.4, 2.9, 1.4, 0.2],\n",
+       "       [4.9, 3.1, 1.5, 0.1],\n",
+       "       [5.4, 3.7, 1.5, 0.2],\n",
+       "       [4.8, 3.4, 1.6, 0.2],\n",
+       "       [4.8, 3. , 1.4, 0.1],\n",
+       "       [4.3, 3. , 1.1, 0.1],\n",
+       "       [5.8, 4. , 1.2, 0.2],\n",
+       "       [5.7, 4.4, 1.5, 0.4],\n",
+       "       [5.4, 3.9, 1.3, 0.4],\n",
+       "       [5.1, 3.5, 1.4, 0.3],\n",
+       "       [5.7, 3.8, 1.7, 0.3],\n",
+       "       [5.1, 3.8, 1.5, 0.3],\n",
+       "       [5.4, 3.4, 1.7, 0.2],\n",
+       "       [5.1, 3.7, 1.5, 0.4],\n",
+       "       [4.6, 3.6, 1. , 0.2],\n",
+       "       [5.1, 3.3, 1.7, 0.5],\n",
+       "       [4.8, 3.4, 1.9, 0.2],\n",
+       "       [5. , 3. , 1.6, 0.2],\n",
+       "       [5. , 3.4, 1.6, 0.4],\n",
+       "       [5.2, 3.5, 1.5, 0.2],\n",
+       "       [5.2, 3.4, 1.4, 0.2],\n",
+       "       [4.7, 3.2, 1.6, 0.2],\n",
+       "       [4.8, 3.1, 1.6, 0.2],\n",
+       "       [5.4, 3.4, 1.5, 0.4],\n",
+       "       [5.2, 4.1, 1.5, 0.1],\n",
+       "       [5.5, 4.2, 1.4, 0.2],\n",
+       "       [4.9, 3.1, 1.5, 0.1],\n",
+       "       [5. , 3.2, 1.2, 0.2],\n",
+       "       [5.5, 3.5, 1.3, 0.2],\n",
+       "       [4.9, 3.1, 1.5, 0.1],\n",
+       "       [4.4, 3. , 1.3, 0.2],\n",
+       "       [5.1, 3.4, 1.5, 0.2],\n",
+       "       [5. , 3.5, 1.3, 0.3],\n",
+       "       [4.5, 2.3, 1.3, 0.3],\n",
+       "       [4.4, 3.2, 1.3, 0.2],\n",
+       "       [5. , 3.5, 1.6, 0.6],\n",
+       "       [5.1, 3.8, 1.9, 0.4],\n",
+       "       [4.8, 3. , 1.4, 0.3],\n",
+       "       [5.1, 3.8, 1.6, 0.2],\n",
+       "       [4.6, 3.2, 1.4, 0.2],\n",
+       "       [5.3, 3.7, 1.5, 0.2],\n",
+       "       [5. , 3.3, 1.4, 0.2],\n",
+       "       [7. , 3.2, 4.7, 1.4],\n",
+       "       [6.4, 3.2, 4.5, 1.5],\n",
+       "       [6.9, 3.1, 4.9, 1.5],\n",
+       "       [5.5, 2.3, 4. , 1.3],\n",
+       "       [6.5, 2.8, 4.6, 1.5],\n",
+       "       [5.7, 2.8, 4.5, 1.3],\n",
+       "       [6.3, 3.3, 4.7, 1.6],\n",
+       "       [4.9, 2.4, 3.3, 1. ],\n",
+       "       [6.6, 2.9, 4.6, 1.3],\n",
+       "       [5.2, 2.7, 3.9, 1.4],\n",
+       "       [5. , 2. , 3.5, 1. ],\n",
+       "       [5.9, 3. , 4.2, 1.5],\n",
+       "       [6. , 2.2, 4. , 1. ],\n",
+       "       [6.1, 2.9, 4.7, 1.4],\n",
+       "       [5.6, 2.9, 3.6, 1.3],\n",
+       "       [6.7, 3.1, 4.4, 1.4],\n",
+       "       [5.6, 3. , 4.5, 1.5],\n",
+       "       [5.8, 2.7, 4.1, 1. ],\n",
+       "       [6.2, 2.2, 4.5, 1.5],\n",
+       "       [5.6, 2.5, 3.9, 1.1],\n",
+       "       [5.9, 3.2, 4.8, 1.8],\n",
+       "       [6.1, 2.8, 4. , 1.3],\n",
+       "       [6.3, 2.5, 4.9, 1.5],\n",
+       "       [6.1, 2.8, 4.7, 1.2],\n",
+       "       [6.4, 2.9, 4.3, 1.3],\n",
+       "       [6.6, 3. , 4.4, 1.4],\n",
+       "       [6.8, 2.8, 4.8, 1.4],\n",
+       "       [6.7, 3. , 5. , 1.7],\n",
+       "       [6. , 2.9, 4.5, 1.5],\n",
+       "       [5.7, 2.6, 3.5, 1. ],\n",
+       "       [5.5, 2.4, 3.8, 1.1],\n",
+       "       [5.5, 2.4, 3.7, 1. ],\n",
+       "       [5.8, 2.7, 3.9, 1.2],\n",
+       "       [6. , 2.7, 5.1, 1.6],\n",
+       "       [5.4, 3. , 4.5, 1.5],\n",
+       "       [6. , 3.4, 4.5, 1.6],\n",
+       "       [6.7, 3.1, 4.7, 1.5],\n",
+       "       [6.3, 2.3, 4.4, 1.3],\n",
+       "       [5.6, 3. , 4.1, 1.3],\n",
+       "       [5.5, 2.5, 4. , 1.3],\n",
+       "       [5.5, 2.6, 4.4, 1.2],\n",
+       "       [6.1, 3. , 4.6, 1.4],\n",
+       "       [5.8, 2.6, 4. , 1.2],\n",
+       "       [5. , 2.3, 3.3, 1. ],\n",
+       "       [5.6, 2.7, 4.2, 1.3],\n",
+       "       [5.7, 3. , 4.2, 1.2],\n",
+       "       [5.7, 2.9, 4.2, 1.3],\n",
+       "       [6.2, 2.9, 4.3, 1.3],\n",
+       "       [5.1, 2.5, 3. , 1.1],\n",
+       "       [5.7, 2.8, 4.1, 1.3],\n",
+       "       [6.3, 3.3, 6. , 2.5],\n",
+       "       [5.8, 2.7, 5.1, 1.9],\n",
+       "       [7.1, 3. , 5.9, 2.1],\n",
+       "       [6.3, 2.9, 5.6, 1.8],\n",
+       "       [6.5, 3. , 5.8, 2.2],\n",
+       "       [7.6, 3. , 6.6, 2.1],\n",
+       "       [4.9, 2.5, 4.5, 1.7],\n",
+       "       [7.3, 2.9, 6.3, 1.8],\n",
+       "       [6.7, 2.5, 5.8, 1.8],\n",
+       "       [7.2, 3.6, 6.1, 2.5],\n",
+       "       [6.5, 3.2, 5.1, 2. ],\n",
+       "       [6.4, 2.7, 5.3, 1.9],\n",
+       "       [6.8, 3. , 5.5, 2.1],\n",
+       "       [5.7, 2.5, 5. , 2. ],\n",
+       "       [5.8, 2.8, 5.1, 2.4],\n",
+       "       [6.4, 3.2, 5.3, 2.3],\n",
+       "       [6.5, 3. , 5.5, 1.8],\n",
+       "       [7.7, 3.8, 6.7, 2.2],\n",
+       "       [7.7, 2.6, 6.9, 2.3],\n",
+       "       [6. , 2.2, 5. , 1.5],\n",
+       "       [6.9, 3.2, 5.7, 2.3],\n",
+       "       [5.6, 2.8, 4.9, 2. ],\n",
+       "       [7.7, 2.8, 6.7, 2. ],\n",
+       "       [6.3, 2.7, 4.9, 1.8],\n",
+       "       [6.7, 3.3, 5.7, 2.1],\n",
+       "       [7.2, 3.2, 6. , 1.8],\n",
+       "       [6.2, 2.8, 4.8, 1.8],\n",
+       "       [6.1, 3. , 4.9, 1.8],\n",
+       "       [6.4, 2.8, 5.6, 2.1],\n",
+       "       [7.2, 3. , 5.8, 1.6],\n",
+       "       [7.4, 2.8, 6.1, 1.9],\n",
+       "       [7.9, 3.8, 6.4, 2. ],\n",
+       "       [6.4, 2.8, 5.6, 2.2],\n",
+       "       [6.3, 2.8, 5.1, 1.5],\n",
+       "       [6.1, 2.6, 5.6, 1.4],\n",
+       "       [7.7, 3. , 6.1, 2.3],\n",
+       "       [6.3, 3.4, 5.6, 2.4],\n",
+       "       [6.4, 3.1, 5.5, 1.8],\n",
+       "       [6. , 3. , 4.8, 1.8],\n",
+       "       [6.9, 3.1, 5.4, 2.1],\n",
+       "       [6.7, 3.1, 5.6, 2.4],\n",
+       "       [6.9, 3.1, 5.1, 2.3],\n",
+       "       [5.8, 2.7, 5.1, 1.9],\n",
+       "       [6.8, 3.2, 5.9, 2.3],\n",
+       "       [6.7, 3.3, 5.7, 2.5],\n",
+       "       [6.7, 3. , 5.2, 2.3],\n",
+       "       [6.3, 2.5, 5. , 1.9],\n",
+       "       [6.5, 3. , 5.2, 2. ],\n",
+       "       [6.2, 3.4, 5.4, 2.3],\n",
+       "       [5.9, 3. , 5.1, 1.8]])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "iris_1d = np.genfromtxt('Data/Iris.csv', delimiter=',', skip_header=1, dtype=None,encoding=None)\n",
     "iris_2d = np.array([row.tolist()[:4] for row in iris_1d])\n",
@@ -140,11 +345,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4.8 3.4 1.6 0.2]\n",
+      " [4.8 3.4 1.9 0.2]\n",
+      " [4.7 3.2 1.6 0.2]\n",
+      " [4.8 3.1 1.6 0.2]\n",
+      " [4.9 2.4 3.3 1. ]\n",
+      " [4.9 2.5 4.5 1.7]]\n"
+     ]
+    }
+   ],
    "source": [
-    "#TODO"
+    "#TODO\n",
+    "condition = (iris_2d[:,2] > 1.5) & (iris_2d[:,0]< 5.0)\n",
+    "print(iris_2d[condition])    "
    ]
   },
   {
@@ -152,19 +372,215 @@
    "metadata": {},
    "source": [
     "**Question 5**\\\n",
-    "Add a new text column to `iris_2d`, which based on the petal length (3rd) column, such that if petal length is: \\\n",
-    "- `Less than 3` --> 'small'\r",
+    "Add a new text column to `iris_2d`, which based on the petal length (3rd) column, such that if petal length is: \n",
+    "- `Less than 3` --> 'small'\n",
     "- `3-5` --> 'medium'\n",
     "- `>=5` --> 'large'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 1, 1],\n",
+       "       [2, 2, 2],\n",
+       "       [3, 3, 3]])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#TODO"
+    "a = np.array([[1, 1], [2, 2], [3, 3]])\n",
+    "a\n",
+    "col = [1,2,3]\n",
+    "np.insert(a,2,col,axis=1)\n",
+    "# array([1, 5, 1, ..., 2, 3, 3])\n",
+    "# np.insert(a, 1, 5, axis=1)\n",
+    "# array([[1, 5, 1],\n",
+    "#        [2, 5, 2],\n",
+    "#        [3, 5, 3]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['5.1' '3.5' '1.4' '0.2' 'small']\n",
+      " ['4.9' '3.0' '1.4' '0.2' 'small']\n",
+      " ['4.7' '3.2' '1.3' '0.2' 'small']\n",
+      " ['4.6' '3.1' '1.5' '0.2' 'small']\n",
+      " ['5.0' '3.6' '1.4' '0.2' 'small']\n",
+      " ['5.4' '3.9' '1.7' '0.4' 'small']\n",
+      " ['4.6' '3.4' '1.4' '0.3' 'small']\n",
+      " ['5.0' '3.4' '1.5' '0.2' 'small']\n",
+      " ['4.4' '2.9' '1.4' '0.2' 'small']\n",
+      " ['4.9' '3.1' '1.5' '0.1' 'small']\n",
+      " ['5.4' '3.7' '1.5' '0.2' 'small']\n",
+      " ['4.8' '3.4' '1.6' '0.2' 'small']\n",
+      " ['4.8' '3.0' '1.4' '0.1' 'small']\n",
+      " ['4.3' '3.0' '1.1' '0.1' 'small']\n",
+      " ['5.8' '4.0' '1.2' '0.2' 'small']\n",
+      " ['5.7' '4.4' '1.5' '0.4' 'small']\n",
+      " ['5.4' '3.9' '1.3' '0.4' 'small']\n",
+      " ['5.1' '3.5' '1.4' '0.3' 'small']\n",
+      " ['5.7' '3.8' '1.7' '0.3' 'small']\n",
+      " ['5.1' '3.8' '1.5' '0.3' 'small']\n",
+      " ['5.4' '3.4' '1.7' '0.2' 'small']\n",
+      " ['5.1' '3.7' '1.5' '0.4' 'small']\n",
+      " ['4.6' '3.6' '1.0' '0.2' 'small']\n",
+      " ['5.1' '3.3' '1.7' '0.5' 'small']\n",
+      " ['4.8' '3.4' '1.9' '0.2' 'small']\n",
+      " ['5.0' '3.0' '1.6' '0.2' 'small']\n",
+      " ['5.0' '3.4' '1.6' '0.4' 'small']\n",
+      " ['5.2' '3.5' '1.5' '0.2' 'small']\n",
+      " ['5.2' '3.4' '1.4' '0.2' 'small']\n",
+      " ['4.7' '3.2' '1.6' '0.2' 'small']\n",
+      " ['4.8' '3.1' '1.6' '0.2' 'small']\n",
+      " ['5.4' '3.4' '1.5' '0.4' 'small']\n",
+      " ['5.2' '4.1' '1.5' '0.1' 'small']\n",
+      " ['5.5' '4.2' '1.4' '0.2' 'small']\n",
+      " ['4.9' '3.1' '1.5' '0.1' 'small']\n",
+      " ['5.0' '3.2' '1.2' '0.2' 'small']\n",
+      " ['5.5' '3.5' '1.3' '0.2' 'small']\n",
+      " ['4.9' '3.1' '1.5' '0.1' 'small']\n",
+      " ['4.4' '3.0' '1.3' '0.2' 'small']\n",
+      " ['5.1' '3.4' '1.5' '0.2' 'small']\n",
+      " ['5.0' '3.5' '1.3' '0.3' 'small']\n",
+      " ['4.5' '2.3' '1.3' '0.3' 'small']\n",
+      " ['4.4' '3.2' '1.3' '0.2' 'small']\n",
+      " ['5.0' '3.5' '1.6' '0.6' 'small']\n",
+      " ['5.1' '3.8' '1.9' '0.4' 'small']\n",
+      " ['4.8' '3.0' '1.4' '0.3' 'small']\n",
+      " ['5.1' '3.8' '1.6' '0.2' 'small']\n",
+      " ['4.6' '3.2' '1.4' '0.2' 'small']\n",
+      " ['5.3' '3.7' '1.5' '0.2' 'small']\n",
+      " ['5.0' '3.3' '1.4' '0.2' 'small']\n",
+      " ['7.0' '3.2' '4.7' '1.4' 'medium']\n",
+      " ['6.4' '3.2' '4.5' '1.5' 'medium']\n",
+      " ['6.9' '3.1' '4.9' '1.5' 'medium']\n",
+      " ['5.5' '2.3' '4.0' '1.3' 'medium']\n",
+      " ['6.5' '2.8' '4.6' '1.5' 'medium']\n",
+      " ['5.7' '2.8' '4.5' '1.3' 'medium']\n",
+      " ['6.3' '3.3' '4.7' '1.6' 'medium']\n",
+      " ['4.9' '2.4' '3.3' '1.0' 'medium']\n",
+      " ['6.6' '2.9' '4.6' '1.3' 'medium']\n",
+      " ['5.2' '2.7' '3.9' '1.4' 'medium']\n",
+      " ['5.0' '2.0' '3.5' '1.0' 'medium']\n",
+      " ['5.9' '3.0' '4.2' '1.5' 'medium']\n",
+      " ['6.0' '2.2' '4.0' '1.0' 'medium']\n",
+      " ['6.1' '2.9' '4.7' '1.4' 'medium']\n",
+      " ['5.6' '2.9' '3.6' '1.3' 'medium']\n",
+      " ['6.7' '3.1' '4.4' '1.4' 'medium']\n",
+      " ['5.6' '3.0' '4.5' '1.5' 'medium']\n",
+      " ['5.8' '2.7' '4.1' '1.0' 'medium']\n",
+      " ['6.2' '2.2' '4.5' '1.5' 'medium']\n",
+      " ['5.6' '2.5' '3.9' '1.1' 'medium']\n",
+      " ['5.9' '3.2' '4.8' '1.8' 'medium']\n",
+      " ['6.1' '2.8' '4.0' '1.3' 'medium']\n",
+      " ['6.3' '2.5' '4.9' '1.5' 'medium']\n",
+      " ['6.1' '2.8' '4.7' '1.2' 'medium']\n",
+      " ['6.4' '2.9' '4.3' '1.3' 'medium']\n",
+      " ['6.6' '3.0' '4.4' '1.4' 'medium']\n",
+      " ['6.8' '2.8' '4.8' '1.4' 'medium']\n",
+      " ['6.7' '3.0' '5.0' '1.7' 'large']\n",
+      " ['6.0' '2.9' '4.5' '1.5' 'medium']\n",
+      " ['5.7' '2.6' '3.5' '1.0' 'medium']\n",
+      " ['5.5' '2.4' '3.8' '1.1' 'medium']\n",
+      " ['5.5' '2.4' '3.7' '1.0' 'medium']\n",
+      " ['5.8' '2.7' '3.9' '1.2' 'medium']\n",
+      " ['6.0' '2.7' '5.1' '1.6' 'large']\n",
+      " ['5.4' '3.0' '4.5' '1.5' 'medium']\n",
+      " ['6.0' '3.4' '4.5' '1.6' 'medium']\n",
+      " ['6.7' '3.1' '4.7' '1.5' 'medium']\n",
+      " ['6.3' '2.3' '4.4' '1.3' 'medium']\n",
+      " ['5.6' '3.0' '4.1' '1.3' 'medium']\n",
+      " ['5.5' '2.5' '4.0' '1.3' 'medium']\n",
+      " ['5.5' '2.6' '4.4' '1.2' 'medium']\n",
+      " ['6.1' '3.0' '4.6' '1.4' 'medium']\n",
+      " ['5.8' '2.6' '4.0' '1.2' 'medium']\n",
+      " ['5.0' '2.3' '3.3' '1.0' 'medium']\n",
+      " ['5.6' '2.7' '4.2' '1.3' 'medium']\n",
+      " ['5.7' '3.0' '4.2' '1.2' 'medium']\n",
+      " ['5.7' '2.9' '4.2' '1.3' 'medium']\n",
+      " ['6.2' '2.9' '4.3' '1.3' 'medium']\n",
+      " ['5.1' '2.5' '3.0' '1.1' 'medium']\n",
+      " ['5.7' '2.8' '4.1' '1.3' 'medium']\n",
+      " ['6.3' '3.3' '6.0' '2.5' 'large']\n",
+      " ['5.8' '2.7' '5.1' '1.9' 'large']\n",
+      " ['7.1' '3.0' '5.9' '2.1' 'large']\n",
+      " ['6.3' '2.9' '5.6' '1.8' 'large']\n",
+      " ['6.5' '3.0' '5.8' '2.2' 'large']\n",
+      " ['7.6' '3.0' '6.6' '2.1' 'large']\n",
+      " ['4.9' '2.5' '4.5' '1.7' 'medium']\n",
+      " ['7.3' '2.9' '6.3' '1.8' 'large']\n",
+      " ['6.7' '2.5' '5.8' '1.8' 'large']\n",
+      " ['7.2' '3.6' '6.1' '2.5' 'large']\n",
+      " ['6.5' '3.2' '5.1' '2.0' 'large']\n",
+      " ['6.4' '2.7' '5.3' '1.9' 'large']\n",
+      " ['6.8' '3.0' '5.5' '2.1' 'large']\n",
+      " ['5.7' '2.5' '5.0' '2.0' 'large']\n",
+      " ['5.8' '2.8' '5.1' '2.4' 'large']\n",
+      " ['6.4' '3.2' '5.3' '2.3' 'large']\n",
+      " ['6.5' '3.0' '5.5' '1.8' 'large']\n",
+      " ['7.7' '3.8' '6.7' '2.2' 'large']\n",
+      " ['7.7' '2.6' '6.9' '2.3' 'large']\n",
+      " ['6.0' '2.2' '5.0' '1.5' 'large']\n",
+      " ['6.9' '3.2' '5.7' '2.3' 'large']\n",
+      " ['5.6' '2.8' '4.9' '2.0' 'medium']\n",
+      " ['7.7' '2.8' '6.7' '2.0' 'large']\n",
+      " ['6.3' '2.7' '4.9' '1.8' 'medium']\n",
+      " ['6.7' '3.3' '5.7' '2.1' 'large']\n",
+      " ['7.2' '3.2' '6.0' '1.8' 'large']\n",
+      " ['6.2' '2.8' '4.8' '1.8' 'medium']\n",
+      " ['6.1' '3.0' '4.9' '1.8' 'medium']\n",
+      " ['6.4' '2.8' '5.6' '2.1' 'large']\n",
+      " ['7.2' '3.0' '5.8' '1.6' 'large']\n",
+      " ['7.4' '2.8' '6.1' '1.9' 'large']\n",
+      " ['7.9' '3.8' '6.4' '2.0' 'large']\n",
+      " ['6.4' '2.8' '5.6' '2.2' 'large']\n",
+      " ['6.3' '2.8' '5.1' '1.5' 'large']\n",
+      " ['6.1' '2.6' '5.6' '1.4' 'large']\n",
+      " ['7.7' '3.0' '6.1' '2.3' 'large']\n",
+      " ['6.3' '3.4' '5.6' '2.4' 'large']\n",
+      " ['6.4' '3.1' '5.5' '1.8' 'large']\n",
+      " ['6.0' '3.0' '4.8' '1.8' 'medium']\n",
+      " ['6.9' '3.1' '5.4' '2.1' 'large']\n",
+      " ['6.7' '3.1' '5.6' '2.4' 'large']\n",
+      " ['6.9' '3.1' '5.1' '2.3' 'large']\n",
+      " ['5.8' '2.7' '5.1' '1.9' 'large']\n",
+      " ['6.8' '3.2' '5.9' '2.3' 'large']\n",
+      " ['6.7' '3.3' '5.7' '2.5' 'large']\n",
+      " ['6.7' '3.0' '5.2' '2.3' 'large']\n",
+      " ['6.3' '2.5' '5.0' '1.9' 'large']\n",
+      " ['6.5' '3.0' '5.2' '2.0' 'large']\n",
+      " ['6.2' '3.4' '5.4' '2.3' 'large']\n",
+      " ['5.9' '3.0' '5.1' '1.8' 'large']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#TODO\n",
+    "col = iris_2d[:,2] \n",
+    "condition = [\n",
+    "    iris_2d[:,2] < 3,\n",
+    "    (iris_2d[:,2] >= 3) & (iris_2d[:,2] < 5),\n",
+    "    iris_2d[:,2] >= 5\n",
+    "]\n",
+    "newcol = np.select(condition,['small','medium','large'])\n",
+    "iris_2d = np.column_stack((iris_2d,newcol))\n",
+    "print(iris_2d)"
    ]
   },
   {
@@ -177,11 +593,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['5.1' '3.8' '1.9' '0.4' 'Iris-setosa']\n"
+     ]
+    }
+   ],
    "source": [
-    "#TODO"
+    "#TODO\n",
+    "iris_1d = np.genfromtxt('Data/Iris.csv', delimiter=',', skip_header=1, dtype=None,encoding=None)\n",
+    "iris_2d = np.array([row.tolist()[:5] for row in iris_1d])\n",
+    "setosa = iris_2d[iris_2d[:,-1]=='Iris-setosa']\n",
+    "sortSetosa = setosa[setosa[:,2].argsort()]\n",
+    "print(sortSetosa[-2])\n"
    ]
   }
  ],
@@ -201,7 +630,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.9"
   },
   "toc": {
    "base_numbering": 1,
